# jterm4

./: .block-parity-ci-trigger  .ci-warp-block-final-trigger  .ci-warp-block-trigger  .gitignore  .pane-node-ci-trigger  .pane-node-trigger  BLOCK_MODE_IMPROVEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  OPTIMIZATION_SUMMARY.md  README.md  ROUND2_NOTES.md  SECURITY.md  config.toml.example  deny.toml  flake.nix
.github/: CODEOWNERS  dependabot.yml  issue-fix-publisher-trigger  migrate_pane_node.py  native-block-splits-retry  native-block-splits-retry-2  native-block-splits-retry-3  native-block-splits-retry-4  native-block-splits-retry-5  pull_request_template.md
.github/scripts/: adapt_pr32_patch.py  apply_block_mode_ux_final_polish.py  apply_block_mode_ux_fix.py  apply_block_mode_ux_followup.py  apply_block_mode_ux_round2.py  block_split_patch.part00  block_split_patch.part01  block_split_patch.part02  block_split_patch.part03  migrate_round10.py  migrate_round8.py  migrate_round9.py  pr32_patch_snapshot.py
.github/workflows/: apply-block-capture-contrast-fix.yml  apply-block-mode-ux-final-polish.yml  apply-block-mode-ux-fix.yml  apply-block-mode-ux-followup.yml  apply-block-mode-ux-round2.yml  apply-block-parity-round2.yml  apply-block-round2-followup.yml  apply-jterm1-background.yml  apply-jterm1-block-parity.yml  apply-pane-node-migration.yml  (+35 more)
data/: io.github.beamiter.jterm4.desktop  io.github.beamiter.jterm4.metainfo.xml
docs/: AI_AGENT_CHAT_ACCEPTANCE.md  ARCHITECTURE.md  BLOCK_MODE_ACCEPTANCE.md  FLATPAK.md  PERFORMANCE.md  RELEASING.md  SMART_COMMAND_CORRECTION.md  USER_GUIDE.md  tailscale-setup.md
packaging/: RELEASE_README.md  install-release.sh
scripts/: apply-block-parity-fixes.py  apply-block-round2-followup.py  benchmark.sh  bootstrap_deps.sh  debug.sh  dev.sh  install.sh  jterm1-background.patch.gz.b64  jterm1-block-round2.patch.gz.b64  jterm1-long-nav.patch.gz.b64  migrate_linux_desktop_packaging.py  migrate_modern_file_tree.py  migrate_multi_window_sessions.py  migrate_project_hardening.py  migrate_structured_logging.py  package-release.sh  round2.patch.gz.b64  security-check.sh  show-state.sh  smoke-flatpak.sh  support-bundle.sh  uninstall.sh
src/: agent.rs  block_view.rs  block_view_types.rs  cli.rs  command_fix.rs  command_history.rs  config.rs  config_store.rs  git_meta.rs  host.rs  keybindings.rs  lib.rs  logging.rs  main.rs  notebook.rs  notify.rs  palette.rs  parser.rs  pty.rs  redact.rs  review_input.rs  state.rs  terminal.rs  ui.rs  workflows.rs
tests/: config_tests.rs  regression_parser.rs  state_tests.rs
(+64 files in other folders)
