[package]
name = "jterm4"
version = "0.1.0"
edition = "2021"

[dependencies]
gdk4 = { version = "0.11.2", features = ["v4_14"] }
gtk4 = "0.11.3"
io-lifetimes = "3.0.1"
libadwaita = { version = "0.9", features = ["v1_5"] }
log = { version = "0.4.30", default-features = true, features = ["std"] }
lru = "0.18"
nix = { version = "0.31.3", features = ["term", "signal", "process", "ioctl"] }
pcre2-sys = "0.2.10"
target-lexicon = "0.13.5"
toml = "1.1.2"
vte4 = { version = "0.10.0", features = ["v0_76"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = { version = "0.6", default-features = false }
zstd = "0.13"
regex = "1"

[dev-dependencies]
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
